# najan

./: .gitignore  LICENSE.txt  README.md  book.toml  lexicon.yaml  najan.sfd  najan.tex  phonotactics.ron  script.sfd
docs/: 404.html  arguments.html  case.html  ch00-00-introduction.html  ch00-introduction.html  ch01-00-phonology.html  ch01-phonology.html  ch02-00-orthography.html  ch02-orthography.html  ch03-00-syntax.html  ch03-syntax.html  ch04-00-binding.html  ch04-00-verb-phrases.html  ch04-01-pronouns.html  ch04-02-determiners.html  ch05-00-noun-phrases.html  ch06-00-pronouns-determiners.html  ch06-01-pronouns.html  ch06-02-determiners.html  chapter_1.html  determiner-phrases.html  index.html  introduction.html  modality.html  najan.css  noun-phrases.html  orthography.html  phonology.html  pluralization.html  print.html  pronouns-determiners.html  pronouns.html  quotations.html  searchindex.js  searchindex.json  stativization.html  syntax.html  tense-aspect.html  verb-phrases.html
lexicon/: common-header.tex  entries.tex  lexicon.tex
mdbook-najan/: Cargo.toml  LICENSE.txt  README.md
mdbook-najan/src/: lib.rs  main.rs
najan/: 00-najan.tex  01-intro.tex  02-phonology.tex  03-orthography.tex  04-morphology.tex  05-syntax.tex  06-binding.tex  07-conjunctions.tex  08-interjections.tex  08-verbs.tex  09-modifiers.tex  09-verbs.tex  11-numbers.tex  A-example-translations.tex  common-header.tex  najan.tex
src/: SUMMARY.md  adverbial-clauses.md  adverbials.md  arguments.md  case.md  causal-and-conditional-sentences.md  causes-conditions.md  ch00-introduction.md  (+32 more)
(+2 files in other folders)
