[package]
description = "Preprocessor for the Najan mdBook"
edition = "2021"
license = "MIT"
name = "mdbook-najan"
readme = "README.md"
repository = "https://github.com/jonathansharman/najan/tree/main/mdbook-najan"
version = "0.1.1"

[dependencies]
anyhow = "1.0.68"
clap = "4.1.4"
mdbook = "0.4.25"
regex = "1.7.1"
semver = "1.0.16"
serde_json = "1.0.91"
