[package]
description = "Preprocessor for the Najan mdBook"
edition = "2021"
license = "MIT"
name = "mdbook-najan"
readme = "README.md"
repository = "https://github.com/jonathansharman/najan/tree/main/mdbook-najan"
version = "0.1.2"

[dependencies]
anyhow = "1.0.75"
clap = "4.4.8"
mdbook = "0.4.35"
regex = "1.10.2"
semver = "1.0.20"
serde_json = "1.0.108"
