[package]
description = "Preprocessor for the Najan mdBook"
edition = "2021"
license = "MIT"
name = "mdbook-najan"
readme = "README.md"
repository = "https://github.com/jonathansharman/najan/tree/main/mdbook-najan"
version = "0.3.0"

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
lexi = "0.4.0"
mdbook = "0.4.37"
regex = "1.10.4"
semver = "1.0.22"
serde_json = "1.0.116"
